--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,7 +37,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/new, roles: ROLE_ANIMATEUR }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/inscription, roles: ROLE_USER }
 
 when@test:
     security:
