--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,6 +12,8 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\User
+    role_hierarchy:
+        ROLE_ADMIN: [ 'ROLE_ANIMATEUR' ]
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -37,7 +39,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/new, roles: ROLE_ANIMATEUR }
-        - { path: ^/inscription, roles: ROLE_USER }
+        - { path: /user/^, roles: ROLE_ADMIN }
 
 when@test:
     security:
